UX: As a user browsing the site on a larger screen where the mega footer text is not aligned with the footer, then I would prefer the two to align - Fixed alignment for bigger screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -113,7 +113,6 @@
     line-height: 1em;
     font-size: $small-font-size;
     color: $grey-color;
-    margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 
     .column {
@@ -185,7 +184,7 @@
   }
 
   p {
-    line-height: 1em;
+    line-height: 1.3em;
     font-size: $small-font-size;
 
     &.copyright {
